# isucon10-final

./: .editorconfig  .envrc  .gitattributes  .gitignore  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: benchmarker.yml  packer-ci.yml  packer.yml  webapp.yml
.github_/workflows/: packer.yml
bench/: Makefile  go.mod  go.sum  main.go
bench/failure/: error.go
bench/session/: session.go
benchmarker/: .gitignore  Makefile  go.mod  go.sum  main.go
benchmarker/failure/: error.go
benchmarker/model/: benchmark_result.go  clarification.go  contest.go  contestant.go  host.go  team.go
benchmarker/pushserver/: LICENSE  README.md  authentication.go  ecdh.go  encryption.go  message.go  service.go  subscription.go  utils.go
benchmarker/random/: alphabet.go  alphabet_test.go  init.go  percentage.go  question.go  reason.go  score.go  score_test.go  team_name.go
benchmarker/scenario/: action.go  assert.go  benchmarker.go  load.go  logger.go  prepare.go  protobuf.go  scenario.go  validation.go  verify.go
benchmarker/session/: action.go  benchmarker.go  browser.go  convert.go  (+2 more)
data/: pattern01.tsv  pattern02.tsv  pattern03.tsv  pattern04.tsv  pattern05.tsv  pattern06.tsv  pattern07.tsv  pattern08.tsv  pattern09.tsv  pattern10.tsv  pattern11.tsv  pattern12.tsv  pattern13.tsv  pattern14.tsv  pattern15.tsv  pattern16.tsv  pattern17.tsv  pattern18.tsv  pattern19.tsv  pattern20.tsv
docs/: manual.md  xsucon.md
examples/: Gemfile  README.md  finish_benchmark_job  show_notifications
examples/webpush/rust/: Cargo.toml
examples/webpush/rust/src/: main.rs
packer/: .gitignore  Makefile  base.libsonnet  benchmarker.jsonnet  ci-run.jsonnet  ci.jsonnet  contestant.jsonnet  full.jsonnet
webapp/: .gitignore  docker-compose.yml  docker.mk  generate_vapid_key.sh  vapid_private.pem  vapid_public.pem
webapp/rust/: Cargo.toml  build.rs
webapp/rust/src/: admin.rs  audience.rs  bench.rs  common.rs  contestant.rs  leaderboard.rs  lib.rs  notifier.rs  proto.rs  registration.rs  webpush.rs
(+642 files in other folders)
