[package]
name = "xsuportal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tonic-build = "0.3"

[dependencies]
bytes = "0.5"
tonic = "0.3"
prost = "0.6"
actix-web = "3.0"
env_logger = "0.7"
listenfd = "0.3"
log = "0.4"
mysql = "18.2"
r2d2 = "0.8"
r2d2_mysql = "18.0"
ring = "0.16"
data-encoding = "2.3"
prost-types = "0.6"
chrono = "0.4"
actix-session = "0.4"
actix-protobuf = "0.6"
actix-files = "0.3"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-stream = "0.2"
serde = "1.0"
mime = "0.3"
