[package]
name = "send_web_push"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
env_logger = "0.7"
structopt = "0.3"
xsuportal = { path = "../../../webapp/rust" }
mysql = "18.2"
chrono = "0.4"
base64 = "0.12"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
url = "2.1"
reqwest = "0.10"
